Fixed issue causing failed connections with the encode worker process. Added handling for AbandonedMutexException that could happen at startup. Added ability to set the priority of the worker process. Partial completion of new range picking UI.
--HG--
branch : beta

--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -243,6 +243,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Controls\ChapterBar.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Controls\InlineWarning.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -362,6 +366,9 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Controls\ChapterBar.xaml.cs">
+      <DependentUpon>ChapterBar.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\PathSegmentSet.cs" />
     <Compile Include="Controls\PathTextBlock.xaml.cs">
