Eliminated VideoRangeTypeCombo enum, Added VideoRangeType.All. Changed "Chapters" queue column to "Range" that displays correctly no matter which range type is selected.
--HG--
branch : beta

--- a/VidCoder/app.config
+++ b/VidCoder/app.config
@@ -88,7 +88,7 @@
     <value>False</value>
    </setting>
    <setting name="QueueColumns" serializeAs="String">
-    <value>Source:200|Title:35|Chapters:60|Destination:200</value>
+    <value>Source:200|Title:35|Range:106|Destination:200</value>
    </setting>
    <setting name="QueueLastColumnWidth" serializeAs="String">
     <value>75</value>
