Improved logging for worker process failures. Changed build to automatically edit the version number in both VidCoder and VidCoderWorker. Authoritative source is now version.txt.
--HG--
branch : beta

--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -802,6 +802,9 @@
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>Config.cs</LastGenOutput>
     </None>
+    <None Include="VidCoderWorker.exe.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Icons\disc.png" />
