Individual encode jobs now log to a separate file as well as the main consolidated file. Added the option to copy the encode job log to the same output folder as the encoded video. Added a button to open the log folder to the Options dialog.
--HG--
branch : beta

--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -833,6 +833,7 @@
     <Content Include="Encode_Complete.wav">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Resource Include="Icons\text_file_16x16.png" />
     <Resource Include="Icons\crop_bg_tile_12x12.png" />
     <Resource Include="Model\Config\Config.txt" />
     <Resource Include="Icons\blue_play_80.png" />
