Added ability to tell VidCoder to look in a different directory for the .sqlite settings file.
--HG--
branch : beta

--- a/VidCoder/VidCoderWorker.exe.config
+++ b/VidCoder/VidCoderWorker.exe.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+	<appSettings>
+		<!-- Uncomment this line and set the value if you want VidCoder to look in a specific directory for app settings instead of %appdata%\VidCoder
+				 Use "." to store the settings files in the same folder as VidCoder.exe.
+		     You must also change the same value in VidCoder.exe.config -->
+		<!--<add key="SettingsDirectory" value="." />-->
+	</appSettings>
+	
 	<startup useLegacyV2RuntimeActivationPolicy="true">
 		<supportedRuntime version="v4.0"/>
 	</startup>
