--- a/VidCoder/app.config
+++ b/VidCoder/app.config
@@ -6,6 +6,13 @@
 		</sectionGroup>
 	</configSections>
 
+	<appSettings>
+		<!-- Uncomment this line and set the value if you want VidCoder to look in a specific directory for app settings instead of %appdata%\VidCoder
+				 Use "." to store the settings files in the same folder as VidCoder.exe.
+		     You must also change the same value in VidCoderWorker.exe.config -->
+		<!--<add key="SettingsDirectory" value="." />-->
+	</appSettings>
+
   <startup useLegacyV2RuntimeActivationPolicy="true">
     <supportedRuntime version="v4.0"/>
   </startup>
