Print out pipe GUID on both sides to the log to ensure they're the same. Also refactored the pipe name to a common constant.
--HG--
branch : beta

--- a/VidCoderWorker/VidCoderWorker.csproj
+++ b/VidCoderWorker/VidCoderWorker.csproj
@@ -84,6 +84,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants.cs" />
     <Compile Include="EncodeState.cs" />
     <Compile Include="HandBrakeEncoder.cs" />
     <Compile Include="IHandBrakeEncoder.cs" />
