Updated HandBrake core to SVN 5590. Updated to handle new AAC FDK encoder, removal of FAAC and renamed existing encoders. Sample rate and framerate lists now come from libhb.
--HG--
branch : beta

--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -751,7 +751,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Resources\CommonRes.es.resx" />
     <EmbeddedResource Include="Resources\CommonRes.eu.resx" />
-    <EmbeddedResource Include="Resources\EncodingRes.es.resx" />
+    <EmbeddedResource Include="Resources\EncodingRes.es.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Resources\EncodingRes.eu.resx" />
     <EmbeddedResource Include="Resources\EncodingRes.hu.resx" />
     <EmbeddedResource Include="Resources\EncodingRes.resx">
