--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -738,6 +738,7 @@
     </Compile>
     <Compile Include="WindowPlacement.cs" />
     <Compile Include="WindowPlacementWpf.cs" />
+    <EmbeddedResource Include="Resources\ChapterMarkersRes.de.resx" />
     <EmbeddedResource Include="Resources\ChapterMarkersRes.es.resx">
       <SubType>Designer</SubType>
     </EmbeddedResource>
@@ -751,10 +752,12 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>ChapterMarkersRes.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="Resources\CommonRes.de.resx" />
     <EmbeddedResource Include="Resources\CommonRes.es.resx" />
     <EmbeddedResource Include="Resources\CommonRes.eu.resx" />
     <EmbeddedResource Include="Resources\CommonRes.fr.resx" />
     <EmbeddedResource Include="Resources\CommonRes.pt.resx" />
+    <EmbeddedResource Include="Resources\EncodingRes.de.resx" />
     <EmbeddedResource Include="Resources\EncodingRes.es.resx" />
     <EmbeddedResource Include="Resources\EncodingRes.eu.resx" />
     <EmbeddedResource Include="Resources\EncodingRes.fr.resx" />
@@ -765,6 +768,7 @@
       <LastGenOutput>EncodingRes.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Resources\EnumsRes.de.resx" />
     <EmbeddedResource Include="Resources\EnumsRes.es.resx" />
     <EmbeddedResource Include="Resources\EnumsRes.eu.resx" />
     <EmbeddedResource Include="Resources\EnumsRes.fr.resx" />
@@ -777,6 +781,7 @@
       <LastGenOutput>EnumsRes.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Resources\LogRes.de.resx" />
     <EmbeddedResource Include="Resources\LogRes.es.resx" />
     <EmbeddedResource Include="Resources\LogRes.eu.resx" />
     <EmbeddedResource Include="Resources\LogRes.fr.resx" />
@@ -786,6 +791,7 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>LogRes.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="Resources\MainRes.de.resx" />
     <EmbeddedResource Include="Resources\MainRes.es.resx" />
     <EmbeddedResource Include="Resources\MainRes.eu.resx" />
     <EmbeddedResource Include="Resources\MainRes.fr.resx" />
@@ -800,6 +806,7 @@
       <LastGenOutput>MainRes.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Resources\MiscRes.de.resx" />
     <EmbeddedResource Include="Resources\MiscRes.es.resx" />
     <EmbeddedResource Include="Resources\MiscRes.eu.resx" />
     <EmbeddedResource Include="Resources\MiscRes.fr.resx" />
@@ -809,6 +816,7 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>MiscRes.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="Resources\OptionsRes.de.resx" />
     <EmbeddedResource Include="Resources\OptionsRes.es.resx" />
     <EmbeddedResource Include="Resources\OptionsRes.eu.resx" />
     <EmbeddedResource Include="Resources\OptionsRes.fr.resx" />
@@ -819,6 +827,7 @@
       <LastGenOutput>OptionsRes.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Resources\PreviewRes.de.resx" />
     <EmbeddedResource Include="Resources\PreviewRes.es.resx" />
     <EmbeddedResource Include="Resources\PreviewRes.eu.resx" />
     <EmbeddedResource Include="Resources\PreviewRes.fr.resx" />
@@ -828,6 +837,7 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>PreviewRes.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="Resources\QueueTitlesRes.de.resx" />
     <EmbeddedResource Include="Resources\QueueTitlesRes.es.resx" />
     <EmbeddedResource Include="Resources\QueueTitlesRes.eu.resx" />
     <EmbeddedResource Include="Resources\QueueTitlesRes.fr.resx" />
@@ -837,6 +847,7 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>QueueTitlesRes.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="Resources\SubtitleRes.de.resx" />
     <EmbeddedResource Include="Resources\SubtitleRes.es.resx" />
     <EmbeddedResource Include="Resources\SubtitleRes.eu.resx" />
     <EmbeddedResource Include="Resources\SubtitleRes.fr.resx" />
