Updated HandBrake core to SVN 5714. A few CLI fixes.
--HG--
branch : beta

--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -825,6 +825,7 @@
     <EmbeddedResource Include="Resources\MiscRes.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>MiscRes.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Resources\MiscRes.zh.resx" />
     <EmbeddedResource Include="Resources\OptionsRes.de.resx" />
