Updated HandBrake core to SVN 5776. Added access to new avformat muxers. Container choices are now pulled dynamically from the HandBrake API. Note that the mp4v2 muxer does not work in 32-bit mode, but the avformat MP4 muxer does not yet support vobsub subtitles.
--HG--
branch : beta

--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -395,6 +395,7 @@
     <Compile Include="DataReaderExtensions.cs" />
     <Compile Include="EnumStringConverter.cs" />
     <Compile Include="Extensions\TimeSpanExtensions.cs" />
+    <Compile Include="Messages\ContainerChangedMessage.cs" />
     <Compile Include="Model\EncodeJobsXml.cs" />
     <Compile Include="Model\UpdateInfo.cs" />
     <Compile Include="Model\UpdateState.cs" />
@@ -652,7 +653,7 @@
     <Compile Include="DragDrop\DraggedAdorner.cs" />
     <Compile Include="DragDrop\IDragItem.cs" />
     <Compile Include="DragDrop\InsertionAdorner.cs" />
-    <Compile Include="DragDrop\Utilities.cs" />
+    <Compile Include="DragDrop\DragDropUtilities.cs" />
     <Compile Include="EnumDisplayer.cs" />
     <Compile Include="EventArgs.cs" />
     <Compile Include="Model\DriveInformation.cs" />
