--- a/VidCoder/packages.config
+++ b/VidCoder/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.0" targetFramework="net40-Client" />
+  <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.5" targetFramework="net40-Client" />
   <package id="MvvmLightLibs" version="4.2.30.0" targetFramework="net40-Client" />
   <package id="valueinjecter" version="2.3.3" targetFramework="net40-Client" />
 </packages>
