Updated HandBrake core to SVN 5953. This should fix the intermittent "encode failed" false positives. Fixed issue with some SSA subtitles failing to burn in.
--HG--
branch : beta

--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -1023,4 +1023,7 @@
     <Copy SourceFiles="..\Lib\$(Platform)\hb.dll" DestinationFolder="$(OutDir)" />
     <Copy SourceFiles="..\Lib\$(Platform)\HandBrakeInterop.pdb" DestinationFolder="$(OutDir)" />
   </Target>
+  <PropertyGroup>
+    <PostBuildEvent>xcopy "$(ProjectDir)..\Lib\fonts" "$(TargetDir)fonts" /e /y /i /r</PostBuildEvent>
+  </PropertyGroup>
 </Project>
