Updated HandBrake core to SVN 6008. Added option to preserve the source folder structure when batch-encoding video files. DRC compatibility is now detected from the HandBrake library and is grayed out when used on a source that does not support it. (Currently non-AC3 sources)
--HG--
branch : beta

--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -410,6 +410,7 @@
     <Compile Include="Messages\ContainerChangedMessage.cs" />
     <Compile Include="Model\EncodeJobsXml.cs" />
     <Compile Include="Model\EncodeResultStatus.cs" />
+    <Compile Include="Model\SourcePath.cs" />
     <Compile Include="Model\UpdateInfo.cs" />
     <Compile Include="Model\UpdateState.cs" />
     <Compile Include="Resources\ChapterMarkersRes.Designer.cs">
